--- a/index.html
+++ b/index.html
@@ -121,7 +121,79 @@
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
         </div>
-        <article></article>
+        <article>
+            <div class="articlBox">
+                <div class="articleText1">
+                    <p>ხშირად დასმული კითხვები</p>
+                    <a href="#">ყველა კითხვა</a>
+                </div>
+                <div>
+                    <div class="questions">
+                        <button class="accordion" style="position: relative;">როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</button>
+                        <div class="panel acordText">
+                            <p>კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:</p><br />
+                            <div class="indentText">
+                                <p>I ეტაპი - პირველ ეტაპზე საჭიროა, შეავსო სასურველი კურსისთვის განკუთვნილი
+                                    სარეგისტრაციო
+                                    ფორმა,
+                                    რომელიც
+                                    განთავსებულია კურსის შიდა გვერდზე. კურსზე რეგისტრაციის დასრულების შემდეგ დაიწყება
+                                    შემოსული
+                                    განცხადებების გადარჩევა. </p>
+                                <p>II ეტაპი - შერჩევის მეორე ეტაპი კურსების მიხედვით განსხვავებულია, ზოგიერთი კურსისთვის
+                                    მოიცავს
+                                    პრე-ტესტს, ზოგიერთ კურსზე კი უნარების ტესტს, სადაც მინიმალური ზღვარის გადალახვის
+                                    შემთხვევაში
+                                    გადახვალ შერჩევის შემდეგ ეტაპზე.</p>
+                                <p>III ეტაპი - მესამე ეტაპი კურსების მიხედვით განსხვავდება: Advance კურსებზე, სადაც
+                                    მოითხოვება
+                                    გარკვეული
+                                    ტექნიკური ცოდნა, მონაწილეებმა უნდა დაწერონ ტექნიკური ტესტი ცოდნის დონის
+                                    შესამოწმებლად,
+                                    ხოლო
+                                    კურსებზე, სადაც რაიმე ტიპის წინასწარი ცოდნა მოთხოვნილი არ არის უნდა შეასრულოთ
+                                    ტექნიკური
+                                    დავალება,
+                                    რაც თქვენი კვლევისა და თვითსწავლის უნარს ამოწმებს.</p>
+                                <p>IV ეტაპი - შერჩევის ბოლო მეოთხე ეტაპი მოიცავს გასაუბრებას შესარჩევ კომისიასთან.
+                                    გასაუბრების
+                                    წარმატებით გავლის შემთხვევაში ჩაირიცხებით კურსზე და გაფორმდება შესაბამისი
+                                    ხელშეკრულება.
+                                </p>
+                            </div>
+                            <p>* სანამ კურსზე დარეგისტრირდები მნიშვნელოვანია, ყურადღებით წაიკითხო კურსის აღწერა, ნახო
+                                რას
+                                ისწავლი
+                                კურსის განმავლობაში და გაიგო გააჩნია თუ არა კურსს დასწრების წინაპირობა. </p>
+                        </div>
+                        <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path class="arrowDown articlepath"
+                                d="M8.14644661,10.1464466 C8.34170876,9.95118446 8.65829124,9.95118446 8.85355339,10.1464466 L12.4989857,13.7981758 L16.1502401,10.1464466 C16.3455022,9.95118446 16.6620847,9.95118446 16.8573469,10.1464466 C17.052609,10.3417088 17.052609,10.6582912 16.8573469,10.8535534 L12.4989857,15.2123894 L8.14644661,10.8535534 C7.95118446,10.6582912 7.95118446,10.3417088 8.14644661,10.1464466 Z">
+                            </path>
+                        </svg></div>
+                        <hr>
+                        <button class="accordion middle-acc">შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</button>
+                        <div class="panel questTwo">
+                            <p>TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ კანდიდატს აქვს მხოლოდ ერთი
+                                კურსის
+                                გავლის
+                                შესაძლებლობა. გარდა Information Security და Python კურსებისა, სადაც Basic დონის გავლის
+                                შემდეგ
+                                შესაძლებელია სწავლის გაგრძელება Advance დონეზე.</p>
+                        </div>
+                        <hr>
+                        <button class="accordion">რა ღირს სწავლა პროგრამის ფარგლებში?</button>
+                        <div class="panel questThree">
+                            <p>პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი ბანკისა და USAID-ის
+                                მიერ.
+                            </p>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+        </article>
     </main>
     <footer>
         <div class="footerBox">
