--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                 </g>
             </svg>
         </a>
-
+        <img class="nav-bar-icon" src="images/burg.png" alt="navBaricon">
         <nav>
             <ul>
                 <li><a href="#">მთავარი</a></li>
                 <li><a href="#">TBC IT</a></li>
-                <li><a class="active-link" href="#">TBC x USAID</a></li>
+                <li><a class="active-link" href="index.html">TBC x USAID</a></li>
                 <li><a href="">რისკები</a></li>
 
             </ul>
@@ -202,7 +202,7 @@
                     <li><img src="https://static.wixstatic.com/media/dd97f4_86c58c47370442a889e9a4e9db4eb00c~mv2.png/v1/crop/x_1,y_0,w_426,h_123/fill/w_106,h_30,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Asset%201%402x.png"
                             alt=""></li>
                     <li> <span> &nbsp;&copy;</span>2023 ყველა უფლება დაცულია</li>
-                    <li><a href="">წესები და პირობები</a></li>
+                    <li><a href="#">წესები და პირობები</a></li>
                 </ul>
             </div>
             <div class=" social-icon-box">
